--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     def domainTestDependencies = rootProject.ext.domainTestDependencies
 
     implementation domainDependencies.javaxAnnotation
+    implementation dataDependencies.kotlin
     implementation domainDependencies.javaxInject
     implementation domainDependencies.rxKotlin
 
